fixed sizes and added scrollbar

--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,17 @@ body {
 	margin: 0;
 	padding: 0;
 	/* change the background color to a dark grey */
-	background: #222222;
-  }
-  
-  * {
+	/* background: #222222; */
+	background: rgba(213, 154, 238, 255);
+	overflow-x: hidden;
+}
+
+* {
 	box-sizing: border-box;
 	font-family: 'Lato', sans-serif;
-  }
-  
-  .full-page {
+}
+
+.full-page {
 	height: 100vh;
 	width: 100vw;
 	padding: 0;
@@ -23,35 +25,37 @@ body {
 	place-items: center;
 
 
-  }
-  
-  .centered-text {
+	}
+
+.centered-text {
 	text-align: center;
-  }
-  
-  .members {
+}
+
+.members {
 	display: grid;
 	place-items: center;
 	grid-template-columns: repeat(1, 1fr);
 	width: 100%;
 	/* change the background color to a dark grey */
 	/* background: #222222; */
+	/* background: rgba(0, 0, 0, 0.19); */
 	gap: 1rem;
-  }
-  
-  @media screen and (min-width: 628px) {
+
+}
+
+@media screen and (min-width: 628px) {
 	.members {
-	  grid-template-columns: repeat(1, 1fr);
+		grid-template-columns: repeat(1, 1fr);
 	}
-  }
-  
-  @media screen and (min-width: 1028px) {
+}
+
+@media screen and (min-width: 1028px) {
 	.members {
-	  grid-template-columns: repeat(3, 1fr);
+		grid-template-columns: repeat(3, 1fr);
 	}
-  }
-  
-  .member {
+}
+
+.member {
 	max-width: fit-content;
 	padding: 1em;
 	/* change the background color to a dark grey */
@@ -60,52 +64,59 @@ body {
 	position: relative;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 	/* color: #222222; */
-  }
-  
-  h1 {
+	/* background-color: rgba(123, 215, 254, 10); */
+	/* background-color: rgb(213, 154, 238); */
+	/* background: rgb(213, 154, 238); */
+	/* background-color: #D59AEE; */
+
+}
+
+h1 {
 	margin: 0;
 	/* change the text color to white */
 	color: #ffffff;
 	font-weight: bold;
-  }
-  
-  h2 {
-	margin: 0;
+}
+
+h2 {
+	margin: 2.5em;
 	/* change the text color to white */
 	color: #ffffff;
-	font-weight: lighter;
-  }
-  
-  .pfp {
+	font-weight: bold;
+	font-size: 2.5em;
+}
+
+.pfp {
 	width: 30vh;
 	height: 30vh;
 	border-radius: 50%;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  }
-  
-  footer {
+}
+
+footer {
 	/* change the background color to a dark grey */
 	background: #222222;
 	/* change the text color to white */
 	color: #ffffff;
 	padding: 10px;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  }
-  
-  .socials {
+	width: 100vw;
+}
+
+.socials {
 	position: absolute;
 	bottom: 0;
 	right: 0;
 	overflow: hidden;
 	padding: 0.5em;
-  }
-  
-  .beside {
+}
+
+.beside {
 	float: left;
 	margin: 0.25em;
-  }
+}
 
-  .centered-text--full-page {
+.centered-text--full-page {
 	/* set the text alignment to center */
 	text-align: center;
 	/* set the font size to a very large value */
@@ -117,6 +128,28 @@ body {
 	/* set the text color to white */
 	color: #ffffff;
 	word-wrap: normal;
+}
 
-  }
-  
+
+
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #fff; 
+	border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #eeeeee; 
+}
